[package]
name = "tek4404"
version = "0.1.0"
authors = ["Seth Morabito <web@loomcom.com>"]
edition = "2021"

[build-dependencies]
cc = "1.0"

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
arraydeque = "0.4.5"
sdl2 = "0.35.2"
tokio = { version = "1", features = ["full"] }
once_cell = "1.13.0"
byteorder = "1.4"
clap = { version = "3.2", features = ["derive"] }
strum = "0.24"
strum_macros = "0.24"
