[package]
name = "tek4404"
version = "0.1.0"
authors = ["Seth Morabito <web@loomcom.com>"]
edition = "2021"

[build-dependencies]
cc = "1.0"

[dependencies]
arraydeque = "0.5"
byteorder = "1.4"
clap = { version = "4.2", features = ["derive"] }
num-derive = "0.3"
num-traits = "0.2"
once_cell = "1.17"
sdl2 = "0.35"
strum = "0.24"
strum_macros = "0.24"
tokio = { version = "1", features = ["full"] }
